<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/add_item_input"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:layout_marginTop="50dp"
            android:gravity="top|center_horizontal"
            android:hint="What is in the image?" />

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="Pick Image" />

        <ImageView
            android:id="@+id/add_item_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Add to database" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>