<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:background="@drawable/border"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:contentDescription="Image"
        />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_toEndOf="@id/item_image"
        android:layout_toRightOf="@id/item_image"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:text="bruh"
        />

    <ImageButton
        android:id="@+id/item_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@id/item_name"
        android:layout_toRightOf="@id/item_name"
        android:src="@android:drawable/ic_delete"
        />

</RelativeLayout>